# ocs2_ros2

./: .gitignore  README.md
advance examples/ocs2_mpcnet/ocs2_legged_robot_mpcnet/launch/: default.launch.py
advance examples/ocs2_mpcnet/ocs2_mpcnet_core/: CMakeLists.txt
advance examples/ocs2_perceptive_anymal/ocs2_anymal_loopshaping_mpc/: README.md
advance examples/ocs2_perceptive_anymal/ocs2_anymal_mpc/: CMakeLists.txt
advance examples/ocs2_perceptive_anymal/segmented_planes_terrain_model/: CMakeLists.txt
advance examples/ocs2_raisim/ocs2_legged_robot_raisim/: CMakeLists.txt
basic examples/: README.md
basic examples/ocs2_ballbot_ros/: package.xml
basic examples/ocs2_legged_robot/: CMakeLists.txt
basic examples/ocs2_legged_robot/include/ocs2_legged_robot/common/: Types.h
basic examples/ocs2_legged_robot/include/ocs2_legged_robot/gait/: MotionPhaseDefinition.h
basic examples/ocs2_legged_robot_ros/: CMakeLists.txt  package.xml
basic examples/ocs2_legged_robot_ros/include/ocs2_legged_robot_ros/visualization/: LeggedRobotVisualizer.h
basic examples/ocs2_legged_robot_ros/src/visualization/: LeggedRobotVisualizer.cpp
basic examples/ocs2_mobile_manipulator/: CMakeLists.txt  package.xml
basic examples/ocs2_mobile_manipulator/config/agileX_piper/: task.info
basic examples/ocs2_mobile_manipulator/config/franka/: task.info
basic examples/ocs2_mobile_manipulator/include/ocs2_mobile_manipulator/: FactoryFunctions.h  ManipulatorModelInfo.h  MobileManipulatorInterface.h
basic examples/ocs2_mobile_manipulator/include/ocs2_mobile_manipulator/constraint/: EndEffectorConstraint.h
basic examples/ocs2_mobile_manipulator/src/: FactoryFunctions.cpp  MobileManipulatorInterface.cpp
basic examples/ocs2_mobile_manipulator/src/constraint/: EndEffectorConstraint.cpp
basic examples/ocs2_mobile_manipulator/test/: testDummyMobileManipulator.cpp  testSelfCollision.cpp
basic examples/ocs2_mobile_manipulator_ros/: CMakeLists.txt  README.md  package.xml
basic examples/ocs2_mobile_manipulator_ros/include/ocs2_mobile_manipulator_ros/: MobileManipulatorDummyVisualization.h
basic examples/ocs2_mobile_manipulator_ros/launch/agileX_piper/: agileX_piper.launch.py
basic examples/ocs2_mobile_manipulator_ros/launch/franka/: franka.launch.py
basic examples/ocs2_mobile_manipulator_ros/launch/include/: mobile_manipulator.launch.py  visualize.launch.py
basic examples/ocs2_mobile_manipulator_ros/rviz/: mobile_manipulator.rviz
basic examples/ocs2_mobile_manipulator_ros/src/: MobileManipulatorDistanceVisualization.cpp  MobileManipulatorDummyMRT.cpp  MobileManipulatorDummyVisualization.cpp  MobileManipulatorTarget.cpp
core/ocs2_core/include/ocs2_core/: Types.h
mpc/ocs2_ipm/: CMakeLists.txt
robotics/ocs2_pinocchio/ocs2_centroidal_model/: CMakeLists.txt
robotics/ocs2_pinocchio/ocs2_centroidal_model/include/ocs2_centroidal_model/: CentroidalModelInfo.h  FactoryFunctions.h
robotics/ocs2_pinocchio/ocs2_centroidal_model/src/: FactoryFunctions.cpp
robotics/ocs2_pinocchio/ocs2_pinocchio_interface/: CMakeLists.txt  package.xml
robotics/ocs2_pinocchio/ocs2_pinocchio_interface/cmake/: pinocchio_config.cmake
robotics/ocs2_pinocchio/ocs2_pinocchio_interface/include/ocs2_pinocchio_interface/: PinocchioEndEffectorKinematics.h  PinocchioInterface.h
robotics/ocs2_pinocchio/ocs2_pinocchio_interface/include/ocs2_pinocchio_interface/implementation/: PinocchioInterface.h
robotics/ocs2_pinocchio/ocs2_pinocchio_interface/src/: PinocchioEndEffectorKinematics.cpp  urdf.cpp
robotics/ocs2_pinocchio/ocs2_self_collision/: CMakeLists.txt
robotics/ocs2_pinocchio/ocs2_self_collision/include/ocs2_self_collision/: PinocchioGeometryInterface.h
robotics/ocs2_pinocchio/ocs2_self_collision/src/: PinocchioGeometryInterface.cpp  SelfCollision.cpp  SelfCollisionCppAd.cpp
robotics/ocs2_pinocchio/ocs2_self_collision_visualization/: CMakeLists.txt
robotics/ocs2_pinocchio/ocs2_self_collision_visualization/src/: GeometryInterfaceVisualization.cpp
robotics/ocs2_pinocchio/ocs2_sphere_approximation/: CMakeLists.txt  package.xml
robotics/ocs2_pinocchio/ocs2_sphere_approximation/include/ocs2_sphere_approximation/: PinocchioSphereInterface.h  SphereApproximation.h
robotics/ocs2_pinocchio/ocs2_sphere_approximation/src/: PinocchioSphereInterface.cpp  SphereApproximation.cpp
robotics/ocs2_ros_interfaces/: CMakeLists.txt
robotics/ocs2_ros_interfaces/include/ocs2_ros_interfaces/command/: JoystickMarkerWrapper.h
robotics/ocs2_ros_interfaces/src/command/: JoystickMarkerWrapper.cpp  MarkerAutoPositionWrapper.cpp
submodules/grid_map_sdf/: CMakeLists.txt  README.md
submodules/grid_map_sdf/include/grid_map_sdf/: SignedDistanceField.hpp
submodules/grid_map_sdf/include/grid_map_sdf/distance_transform/: dt.hpp  image.hpp  imconv.hpp  imutil.hpp  misc.hpp  pnmfile.hpp
submodules/grid_map_sdf/src/: SignedDistanceField.cpp
